# nesemuhs

./: .gitignore  CHANGELOG.md  Makefile  nesemuhs.cabal
app/: Main.hs
src/NesEmu/: Cpu.hs  Ppu.hs  Rom.hs  UI.hs
src/NesEmu/Cpu/: Flags.hs  Memory.hs  Opcodes.hs  Operations.hs  Types.hs
tests/: CpuSpec.hs  Main.hs
tests/NesEmuTest/: Cpu.hs
tests/NesEmuTest/Cpu/: Flags.hs  Memory.hs  Operations.hs
tools/: format.py
