cabal-version:      3.0
name:               nesemuhs
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             puggeraponanna
maintainer:         ponannapuggera@gmail.com

-- A copyright notice.
-- copyright:
category:
extra-source-files: CHANGELOG.md


library
    build-depends:
        base ^>=4.14.3.0
    hs-source-dirs: src
    exposed-modules:
        NesEmu.Cpu
     
executable nesemu
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , nesemuhs
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nesemu-test
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: tests
    main-is: Main.hs
    other-modules:
        CpuSpec
    build-depends:
        base ^>=4.14.3.0
      , nesemuhs
      , hspec
