cabal-version:      3.6
name:               nesemuhs
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             puggeraponanna
maintainer:         ponannapuggera@gmail.com

-- A copyright notice.
-- copyright:
category:
extra-source-files: CHANGELOG.md


library
    build-depends:
        base >=4.16 && <4.22
      , lens
      , bytestring
      , sdl2
      , vector
      , mtl
      , text
    hs-source-dirs: src
    exposed-modules:
        NesEmu.Cpu
        NesEmu.Cpu.Flags
        NesEmu.Cpu.Memory
        NesEmu.Cpu.Types
        NesEmu.Cpu.Opcodes
        NesEmu.Cpu.Operations
        NesEmu.Rom
        NesEmu.Ppu
        NesEmu.UI
    ghc-options:
        -Wall
    default-extensions:
        PatternSynonyms
     
executable nesemu
    main-is:          Main.hs
    build-depends:
        base >=4.16 && <4.22
      , nesemuhs
      , sdl2
      , vector
      , mtl
      , text
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite nesemu-test
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: tests
    main-is: Main.hs
    other-modules:
        NesEmuTest.Cpu
        NesEmuTest.Cpu.Memory
        NesEmuTest.Cpu.Flags
        NesEmuTest.Cpu.Operations
    build-depends:
        base >=4.16 && <4.22
      , nesemuhs
      , hspec
